--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jannekem/actions-workflow#readme",
   "dependencies": {
+    "chalk": "^4.1.1",
     "inquirer": "^8.1.2"
   },
   "type": "module"
