--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/jannekem/actions-workflow#readme",
   "dependencies": {
     "chalk": "^4.1.1",
-    "inquirer": "^8.1.2"
+    "inquirer": "^8.1.2",
+    "yaml": "^1.10.2"
   },
   "type": "module"
 }
